--- a/ffox/userChrome.css
+++ b/ffox/userChrome.css
@@ -1,15 +1,15 @@
 * {
   border-radius: 10px;
   box-shadow: none !important;
-  outline: none !important; 
+  outline: none !important;
 }
 
 #nav-bar {
-  visibility: collapse
+  visibility: collapse;
 }
 
 #TabsToolbar {
-  visibility: collapse !important
+  visibility: collapse !important;
 }
 
 menupopup:not(.in-menulist) > menuitem,
@@ -24,10 +24,10 @@ menupopup:not(.in-menulist) > menu {
   height: calc(100vh - 50px) !important;
   margin: 25px !important;
   background-color: #1a1b26 !important;
+  box-shadow: 8px 8px 20px #000d1abf !important;
 }
 
 div#moz-custom-content-container {
   border-radius: 10px;
   background-color: red;
 }
-
